--- a/Front End/Lab 2/Assignment 2/content.html
+++ b/Front End/Lab 2/Assignment 2/content.html
@@ -27,7 +27,7 @@
         <h2><u>Contact us</u></h2><br><br><br>
 
         <center>
-            <form action="">
+            <form action="" method="GET">
                 
                 <table border="2">
                     <tr>
