--- a/Front End/lab 4/Assignment/index.html
+++ b/Front End/lab 4/Assignment/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-
+    <nav></nav>
 
     <header class="header">
         <h1 class="heading-text">location to visit</h1>
@@ -17,7 +17,7 @@
     <section>
         <div class="content">
             <div class="box">
-                <img class="img" src="img/5.jpg" alt="">
+                <img class="img" src="img/5.jpg" alt="PHOTO">
                 <div class="box-text">
                     <span class="box-heading">bla bla</span>
                     <p class="box-paragrah"> 
