--- a/Front End/lab 5/index.html
+++ b/Front End/lab 5/index.html
@@ -30,8 +30,8 @@
    <!-- Start Content -->
     <section class="content">
         <div class="right">
-            <h4>The family and the school are partners in creating a leading generation that benefits society, so make sure to choose the right partner</h4>
-            <img src="img/WhatsApp Image 2023-12-01 at 3.05.39 PM.jpeg" alt="photo">
+            <h4 class="img-text">The family and the school are partners in creating a leading generation that benefits society, so make sure to choose the right partner</h4>
+            <img src="img/parent-sign-in.png" alt="photo">
         </div>
         <div class="left">
             <h1>Register Parent Account</h1>
