--- a/Front End/lab 6/Assignment/index.html
+++ b/Front End/lab 6/Assignment/index.html
@@ -438,6 +438,112 @@
 
                     </div>
                 </div>
+                <div class="video">
+                    <div class="video-img">
+                        <img src="img/pexels-pixabay-268533.jpg" alt="">
+                    </div>
+                    <div class="video-title">
+
+                        <div class="video-icon">
+                            <img src="img/pexels-pixabay-268533.jpg" alt="">
+                        </div>
+
+                        <div class="video-text">
+                            <h4>Top 5 programing languages to learn in 2021 | best programing languages to learn</h4>
+                            <p>
+                                futureCoders <br>
+                                10M Viwe.3 Months Ago
+                            </p>
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="video-img">
+                        <img src="img/pexels-pixabay-268533.jpg" alt="">
+                    </div>
+                    <div class="video-title">
+
+                        <div class="video-icon">
+                            <img src="img/pexels-pixabay-268533.jpg" alt="">
+                        </div>
+
+                        <div class="video-text">
+                            <h4>Top 5 programing languages to learn in 2021 | best programing languages to learn</h4>
+                            <p>
+                                futureCoders <br>
+                                10M Viwe.3 Months Ago
+                            </p>
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="video-img">
+                        <img src="img/pexels-pixabay-268533.jpg" alt="">
+                    </div>
+                    <div class="video-title">
+
+                        <div class="video-icon">
+                            <img src="img/pexels-pixabay-268533.jpg" alt="">
+                        </div>
+
+                        <div class="video-text">
+                            <h4>Top 5 programing languages to learn in 2021 | best programing languages to learn</h4>
+                            <p>
+                                futureCoders <br>
+                                10M Viwe.3 Months Ago
+                            </p>
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="video-img">
+                        <img src="img/pexels-pixabay-268533.jpg" alt="">
+                    </div>
+                    <div class="video-title">
+
+                        <div class="video-icon">
+                            <img src="img/pexels-pixabay-268533.jpg" alt="">
+                        </div>
+
+                        <div class="video-text">
+                            <h4>Top 5 programing languages to learn in 2021 | best programing languages to learn</h4>
+                            <p>
+                                futureCoders <br>
+                                10M Viwe.3 Months Ago
+                            </p>
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="video-img">
+                        <img src="img/pexels-pixabay-268533.jpg" alt="">
+                    </div>
+                    <div class="video-title">
+
+                        <div class="video-icon">
+                            <img src="img/pexels-pixabay-268533.jpg" alt="">
+                        </div>
+
+                        <div class="video-text">
+                            <h4>Top 5 programing languages to learn in 2021 | best programing languages to learn</h4>
+                            <p>
+                                futureCoders <br>
+                                10M Viwe.3 Months Ago
+                            </p>
+
+                        </div>
+
+                    </div>
+                </div>
+                
             </div>
 
            
