--- a/Front End/lab 12 (JS)/Assignment 2/index.html
+++ b/Front End/lab 12 (JS)/Assignment 2/index.html
@@ -12,7 +12,7 @@
     <!-- Start Nav  -->
     <nav>
 
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
             <img src="img/logo.png" alt="logo" >
         </a>
         
@@ -69,7 +69,7 @@
         </div>
 
         <div class="discover-content">
-            <img src="img/pexels-roxanne-shewchuk-2183927.webp" alt="feroon-img">
+            <img src="img/pexels-roxanne-shewchuk-2183927.webp" alt="feroon-img" loading="lazy">
 
             <div class="text">
 
@@ -103,7 +103,7 @@
         <div class="icons">
             <div class="icon">
 
-                <img src="img/hieroglyph.png" alt="hieroglyph">
+                <img src="img/hieroglyph.png" alt="hieroglyph" loading="lazy">
 
                 <span>
                     Discover Ancient Egypt
@@ -112,7 +112,7 @@
             </div>
             <div class="icon">
 
-                <img src="img/virtual-tour.png" alt="virtual-tour">
+                <img src="img/virtual-tour.png" alt="virtual-tour" loading="lazy">
 
                 <span>
                     Listen To Voice Records
@@ -121,7 +121,7 @@
             </div>
             <div class="icon">
 
-                <img src="img/multimedia-player.png" alt="multimedia-player">
+                <img src="img/multimedia-player.png" alt="multimedia-player" loading="lazy">
 
                 <span>
                     Buy Account and pay money
@@ -130,7 +130,7 @@
             </div>
             <div class="icon">
 
-                <img src="img/airplane-ticket.png" alt="airplane-ticket">
+                <img src="img/airplane-ticket.png" alt="airplane-ticket" loading="lazy">
 
                 <span>
                     Reserve Flights and come
@@ -163,7 +163,7 @@
             </div>
         </div>
         <div class="box-video">
-            <video src="video/Let's Go - Egypt.mp4" muted loop autoplay></video>
+            <video src="video/Let's Go - Egypt.mp4" muted loop autoplay ></video>
         </div>
 
     
@@ -178,13 +178,13 @@
             Gallery
         </h1>
         <div class="imgs">
-            <img src="img/pexels-alex-azabache-3214970.webp" alt="alex-img">
-            <img src="img/pexels-alex-azabache-3214972.webp" alt="alex-img">
-            <img src="img/pexels-antonio-filigno-10287305 (1).webp" alt="alex-img">
-            <img src="img/pexels-antonio-filigno-10287306 (1).webp" alt="alex-img">
-            <img src="img/pexels-yasmine-qasem-2034684.webp" alt="alex-img">
-            <img src="img/pexels-spencer-davis-4353815.webp" alt="alex-img">
-            <img src="img/pexels-roxanne-shewchuk-2184580.webp" alt="alex-img">
+            <img src="img/pexels-alex-azabache-3214970.webp" alt="alex-img"  >
+            <img src="img/pexels-alex-azabache-3214972.webp" alt="alex-img" >
+            <img src="img/pexels-antonio-filigno-10287305 (1).webp" alt="alex-img" >
+            <img src="img/pexels-antonio-filigno-10287306 (1).webp" alt="alex-img" >
+            <img src="img/pexels-yasmine-qasem-2034684.webp" alt="alex-img" >
+            <img src="img/pexels-spencer-davis-4353815.webp" alt="alex-img" >
+            <img src="img/pexels-roxanne-shewchuk-2184580.webp" alt="alex-img" >
             <img src="img/homebg.jpg" alt="alex-img">
         </div>
     </section>
