--- a/Front End/lab 12 (JS)/Assignment 2/contact us.html
+++ b/Front End/lab 12 (JS)/Assignment 2/contact us.html
@@ -15,7 +15,7 @@
      <!-- Start Nav  -->
      <nav>
 
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
             <img src="img/logo.png" alt="logo" >
         </a>
         
